--- a/w4.css
+++ b/w4.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Sample CSS Document */
 
-#eagleLogo {
+#eagleLogo {float:right}
 
 }
 
@@ -10,7 +10,7 @@ h1 {
 }
 
 .eslrTitle {
-	color: blue;	
+	color: blue;
 	font-weight: bold;
 	font-family: mistral;
 }
